# web-site-load

./: LICENSE  README.md  pyproject.toml
tests/: test_web_site_load.py
web_site_load/: main.py  sitemapSwarmer.py  webSiteLoad.py
