[tool.poetry]
name = "web-site-load"
version = "0.1.0"
description = "Find your sitemap, find your pages, fetch your pages."
authors = ["Don Bowman <don@agilicus.com>"]
license = "MIT"
homepage = "https://www.agilicus.com/latency-and-load-testing-web-site"
repository = "https://github.com/Agilicus/web-site-load"

[tool.poetry.dependencies]
python = "^3.8"
locust = "^1.4.3"
pyquery = "^1.4.3"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web-site-load  = 'web_site_load.main:main'
web-site-run  = 'web_site_load.main:run'
